[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdep-analyzer"
version = "2.0.0"
description = "C/C++ Dependency Analyzer with Clean Architecture Analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cdep-analyzer contributors"}
]
keywords = [
    "c",
    "cpp",
    "c++",
    "dependency",
    "analyzer",
    "clean-architecture",
    "visualization",
    "header",
    "include"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/example/cdep-analyzer"
Documentation = "https://github.com/example/cdep-analyzer#readme"
Repository = "https://github.com/example/cdep-analyzer"
Issues = "https://github.com/example/cdep-analyzer/issues"

[project.scripts]
cdep-analyzer = "cdep_analyzer:main"

[tool.setuptools]
py-modules = ["cdep_analyzer"]

[tool.setuptools.packages.find]
where = ["."]
